update html link img , add new 3d car model , change design of landing page , create new component for name , links like twitter etc, add new links twitter and resume

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://img.freepik.com/premium-vector/profile-icon-vector-illustration-design-template_827767-5831.jpg?w=740" />
+    <link rel="icon" type="image/svg+xml" href="https://t4.ftcdn.net/jpg/00/97/00/09/240_F_97000908_wwH2goIihwrMoeV9QF3BW6HtpsVFaNVM.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rajputshashank</title>
   </head>
